--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -94,6 +94,8 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Editor.h" />
     <ClInclude Include="Source\Panels\EditorPanel.h" />
+    <ClInclude Include="Source\Panels\GameView.h" />
+    <ClInclude Include="Source\Panels\SceneView.h" />
     <ClInclude Include="Source\Panels\Viewport.h" />
   </ItemGroup>
   <ItemGroup>
@@ -107,4 +109,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
