--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -11,6 +11,12 @@
     <ClInclude Include="Source\Panels\EditorPanel.h">
       <Filter>Panels</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Panels\GameView.h">
+      <Filter>Panels</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Panels\SceneView.h">
+      <Filter>Panels</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Panels\Viewport.h">
       <Filter>Panels</Filter>
     </ClInclude>
