--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -8,16 +8,22 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Editor.h" />
+    <ClInclude Include="Source\Panels\DetailsPanel.h">
+      <Filter>Panels</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Panels\EditorPanel.h">
       <Filter>Panels</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Panels\GameView.h">
+    <ClInclude Include="Source\Panels\GameViewPanel.h">
       <Filter>Panels</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Panels\SceneView.h">
+    <ClInclude Include="Source\Panels\HierarchyPanel.h">
       <Filter>Panels</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Panels\Viewport.h">
+    <ClInclude Include="Source\Panels\SceneViewPanel.h">
+      <Filter>Panels</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Panels\ViewportPanel.h">
       <Filter>Panels</Filter>
     </ClInclude>
   </ItemGroup>
